tests/__snapshots__/validation-toBeInstantiableWith-stderr.snap.txt
Error: An argument for 'source' or type argument for 'Source' must be provided.

  37 | describe("argument for 'source'", () => {
  38 |   test("must be provided", () => {
  39 |     expect().type.toBeInstantiableWith<[never]>();
     |     ~~~~~~
  40 |   });
  41 | 
  42 |   test("must be an instantiable expression", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:39:5

Error: An argument for 'source' must be an instantiable expression.

  41 | 
  42 |   test("must be an instantiable expression", () => {
  43 |     expect("abc").type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  44 |     expect(123).type.toBeInstantiableWith<[never]>();
  45 |     expect(false).type.toBeInstantiableWith<[never]>();
  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:43:12

Error: An argument for 'source' must be an instantiable expression.

  42 |   test("must be an instantiable expression", () => {
  43 |     expect("abc").type.toBeInstantiableWith<[never]>();
  44 |     expect(123).type.toBeInstantiableWith<[never]>();
     |            ~~~
  45 |     expect(false).type.toBeInstantiableWith<[never]>();
  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  47 |     expect(null).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:44:12

Error: An argument for 'source' must be an instantiable expression.

  43 |     expect("abc").type.toBeInstantiableWith<[never]>();
  44 |     expect(123).type.toBeInstantiableWith<[never]>();
  45 |     expect(false).type.toBeInstantiableWith<[never]>();
     |            ~~~~~
  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  47 |     expect(null).type.toBeInstantiableWith<[never]>();
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:45:12

Error: Expression is not instantiable with the given type argument.

Type 'undefined' has no signatures for which the type argument list is applicable.

  44 |     expect(123).type.toBeInstantiableWith<[never]>();
  45 |     expect(false).type.toBeInstantiableWith<[never]>();
  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();
     |                                                  ~~~~~
  47 |     expect(null).type.toBeInstantiableWith<[never]>();
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  49 |   });

       at ./__typetests__/toBeInstantiableWith.tst.ts:46:50 ❭ argument for 'source' ❭ must be an instantiable expression

Error: An argument for 'source' must be an instantiable expression.

  45 |     expect(false).type.toBeInstantiableWith<[never]>();
  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  47 |     expect(null).type.toBeInstantiableWith<[never]>();
     |            ~~~~
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
  49 |   });
  50 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:47:12

Error: An argument for 'source' must be an instantiable expression.

  46 |     expect(undefined).type.toBeInstantiableWith<[never]>();
  47 |     expect(null).type.toBeInstantiableWith<[never]>();
  48 |     expect(() => undefined).type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~
  49 |   });
  50 | 
  51 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:48:12

Error: The type argument must be an instantiable type.

  60 | describe("type argument for 'Source'", () => {
  61 |   test("must be an instantiable type", () => {
  62 |     expect<string>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  63 |     expect<number>().type.toBeInstantiableWith<[never]>();
  64 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  65 |     expect<undefined>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:62:12

Error: The type argument must be an instantiable type.

  61 |   test("must be an instantiable type", () => {
  62 |     expect<string>().type.toBeInstantiableWith<[never]>();
  63 |     expect<number>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~
  64 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  65 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  66 |     expect<null>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:63:12

Error: The type argument must be an instantiable type.

  62 |     expect<string>().type.toBeInstantiableWith<[never]>();
  63 |     expect<number>().type.toBeInstantiableWith<[never]>();
  64 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~
  65 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  66 |     expect<null>().type.toBeInstantiableWith<[never]>();
  67 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:64:12

Error: The type argument must be an instantiable type.

  63 |     expect<number>().type.toBeInstantiableWith<[never]>();
  64 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  65 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~
  66 |     expect<null>().type.toBeInstantiableWith<[never]>();
  67 | 
  68 |     expect<() => void>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:65:12

Error: The type argument must be an instantiable type.

  64 |     expect<boolean>().type.toBeInstantiableWith<[never]>();
  65 |     expect<undefined>().type.toBeInstantiableWith<[never]>();
  66 |     expect<null>().type.toBeInstantiableWith<[never]>();
     |            ~~~~
  67 | 
  68 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  69 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();

       at ./__typetests__/toBeInstantiableWith.tst.ts:66:12

Error: The type argument must be an instantiable type.

  66 |     expect<null>().type.toBeInstantiableWith<[never]>();
  67 | 
  68 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~
  69 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
  70 |   });
  71 | 

       at ./__typetests__/toBeInstantiableWith.tst.ts:68:12

Error: The type argument must be an instantiable type.

  67 | 
  68 |     expect<() => void>().type.toBeInstantiableWith<[never]>();
  69 |     expect<new () => Person>().type.toBeInstantiableWith<[never]>();
     |            ~~~~~~~~~~~~~~~~
  70 |   });
  71 | 
  72 |   test("allowed expressions", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:69:12

Error: Type argument for 'Target' must be provided.

  87 | describe("type argument for 'Target'", () => {
  88 |   test("must be provided", () => {
  89 |     expect<Box<_>>().type.toBeInstantiableWith();
     |                           ~~~~~~~~~~~~~~~~~~~~
  90 |   });
  91 | 
  92 |   test("must be type argument", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:89:27

Error: Type argument for 'Target' must be provided.

  92 |   test("must be type argument", () => {
  93 |     // @ts-expect-error!
  94 |     expect<Box<_>>().type.toBeInstantiableWith(["one"]);
     |                           ~~~~~~~~~~~~~~~~~~~~
  95 |   });
  96 | 
  97 |   test("must be a tuple type", () => {

       at ./__typetests__/toBeInstantiableWith.tst.ts:94:27

Error: The type argument must be a tuple type.

   97 |   test("must be a tuple type", () => {
   98 |     // @ts-expect-error!
   99 |     expect<Box<_>>().type.toBeInstantiableWith<string>();
      |                                                ~~~~~~
  100 |   });
  101 | });
  102 | 

        at ./__typetests__/toBeInstantiableWith.tst.ts:99:48

